reference-llvm/tests/should-fail/fail10.mu
// too many numeric args to intrinsic

function @entry foo() {
    [write 7, 8, .console];
}
